--- a/.gitignore
+++ b/.gitignore
@@ -161,4 +161,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-Tech/Week4
+Tech/Week4/data.zip
+Tech/Week4/run_jupyter.py
